--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,66 @@
+2004-03-12  Markus Rollmann  <rollmark@uni-koblenz.de>
+
+	* lib/kerosin/renderserver/renderserver.cpp:
+	- minor clean up of RenderServer implementation; commented out
+	fancy lighting render path
+
+	* app/rcssmonitor3d/kerosin/german.scan.rb:
+	- german.scan.rb is a ScanCode translation for a german keyboard,
+	i.e. it defines a mapping from InputServer constants to characters
+	and symbolic key names
+
+	* app/rcssmonitor3d/kerosin/bindings.rb:
+	- bindings.rb sets up a mapping from input constants used by the
+	Inputserver to application defined command constants.
+
+	* app/rcssmonitor3d/kerosin/rcssmonitor3D-kerosin.rb:
+	- rcssmonitor3D-kerosin.rb setups all server needed by the monitor
+	and creates a sample scene
+
+	* app/rcssmonitor3d/kerosin/main.cpp:
+	- main.cpp implements a minimal framework to initinialize the
+	kerosin library and display a sample scene. It does not connect to
+	the server yet.
+
+	* app/rcssmonitor3d/kerosin/Makefile.am:
+	- added Makefile.am for the kerosin based monitor
+
+	* app/rcssmonitor3d/Makefile.am:
+	- added kerosin subdir
+
+	* configure.ac: 
+	- added app/rcssmonitor3d/kerosin Makefile
+
+	* app/rcssmonitor3d/lite/main.cpp:
+	- set the correct RelPathPrefix in the Zeitgeist constructor
+	- removed the hardcoded prefix from the call to RunInitScript
+
+	* lib/kerosin/kerosin.cpp:
+	- removed the hardcoded prefix "../../" from the call to
+	RunInitScript()
+
+	* lib/oxygen/oxygen.cpp:
+	- removed the hardcoded prefix '../../' from the call to
+	RunInitScript
+
+	* lib/zeitgeist/zeitgeist.cpp, lib/zeitgeist/zeitgeist.h:
+	- added a second constructor that passes the relPathPrefix to be
+	used to the ScriptServer
+
+	* lib/zeitgeist/scriptserver/scriptserver.cpp:
+	- changed the ScriptServer to use a prefix that is prepended to
+	the relativ path given to RunInitScript. Previously this prefix
+	was hardcoded in the init calls from the different libs and
+	suitable only to find sccripts the 'app/' directory, when run from
+	the CVS tree.
+
+	* lib/zeitgeist/scriptserver/scriptserver.h:
+	- added member mRelPathPrefix
+	- added method SetInitRelPathPrefix
+
+	* lib/zeitgeist/zeitgeist.h: 
+	- whitespace only
+
 2004-03-10  Markus Rollmann  <rollmark@uni-koblenz.de>
 
 	* app/rcssmonitor3d/lite/main.cpp:
