--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-28  Markus Rollmann  <rollmark@uni-koblenz.de>
+
+	* lib/oxygen/gamecontrolserver/predicate.cpp:
+	- avoid implicit copy of ParameterList
+
 2004-03-27  Markus Rollmann  <rollmark@uni-koblenz.de>
 	* lib/oxygen/sceneserver/sceneserver.cpp,
 	* lib/oxygen/sceneserver/sceneserver.h: 
