--- a/ChangeLog
+++ b/ChangeLog
@@ -112,6 +112,100 @@
 	* lib/salt/salt.h: 
 	removed #include "quadlink.h"
 
+2004-03-28  Markus Rollmann  <rollmark@uni-koblenz.de>
+
+	* app/rcssmonitor3d/lib/commserver.cpp,
+	* app/rcssmonitor3d/lib/commserver.h,
+	* app/rcssmonitor3d/lib/monitorparser.cpp,
+	* app/rcssmonitor3d/lib/monitorparser.h,
+	* app/rcssmonitor3d/lite/main.cpp,
+	* app/rcssmonitor3d/kerosin/main.cpp, 
+	* app/agenttest/worldmodel.cpp:
+	* plugin/soccer/trainercommandparser/trainercommandparser.cpp,
+	* plugin/soccer/trainercommandparser/trainercommandparser.h,
+	* plugin/soccer/sexpmonitor/sexpmonitor.cpp,
+	* plugin/soccer/sexpmonitor/sexpmonitor.h,
+	* plugin/soccer/gamestateperceptor/gamestateperceptor.cpp,
+	* plugin/soccer/gamestateperceptor/gamestateperceptor.h:
+	* plugin/soccer/agentstateperceptor/agentstateperceptor.cpp,
+	* plugin/soccer/agentstateperceptor/agentstateperceptor.h,
+	* plugin/sexpparser/sexpparser.cpp, plugin/sexpparser/sexpparser.h:
+	* plugin/collisionperceptor/collisionperceptor.cpp,
+	* plugin/collisionperceptor/collisionperceptor.h,
+	* lib/oxygen/spadesserver/spadescreatesenseevent.cpp,
+	* lib/oxygen/agentaspect/agentaspect.cpp,
+	* lib/oxygen/agentaspect/agentaspect.h:
+	* lib/oxygen/agentaspect/perceptor.h,
+	* lib/oxygen/gamecontrolserver/gamecontrolserver.cpp:
+	- adapted to PredicateList
+
+	* plugin/soccer/visionperceptor/visionperceptor.cpp,
+	* plugin/soccer/visionperceptor/visionperceptor.h:
+	- adapted to PredicateList	
+	- using template ListChildrenSupportingClass
+	- using static_cast in TLeafList loop
+
+	* plugin/perfectvisionperceptor/perfectvisionperceptor.cpp,
+	* plugin/perfectvisionperceptor/perfectvisionperceptor.h:
+	- adapted to PredicateList
+	- using template ListChildrenSupportingClass and FindParentSupportingClass
+
+	* lib/oxygen/gamecontrolserver/baseparser.h:
+	- changed BaseParser interface to work with PredicateLists
+
+	* lib/oxygen/gamecontrolserver/predicate.cpp, lib/oxygen/gamecontrolserver/predicate.h:
+	- added class PredicateList
+
+	* plugin/soccer/gamestateperceptor/gamestateperceptor.cpp,
+	* plugin/soccer/agentstateperceptor/agentstateperceptor.cpp,
+	* plugin/soccer/visionperceptor/visionperceptor.cpp:
+	- using AddList, to insert new ParamterLists instead of AddValue
+	
+	* lib/zeitgeist/parameterlist.cpp, lib/zeitgeist/parameterlist.h:
+	- added method AddList that inserts an empty ParameterList as a
+	new value at the end of the managed sequence and returns a
+	reference to the new list. Using AddList instead of AddValue
+	avoids copying a list on insertion.
+
+	* lib/oxygen/gamecontrolserver/predicate.cpp:
+	- avoid implicit copy of ParameterList
+
+2004-03-27  Markus Rollmann  <rollmark@uni-koblenz.de>
+	* lib/oxygen/sceneserver/sceneserver.cpp,
+	* lib/oxygen/sceneserver/sceneserver.h: 
+	- caching mActiveScene, mActiveSpace and mActiveWorld
+
+	* lib/oxygen/sceneserver/basenode.cpp:
+	- changed PrePhysicsUpdate, PostPhysicsUpdate and UpdateHierarchy
+	to use template ListChildrenSupportingClass - changed GetScene to
+	use FindParentSupportingClass
+
+	* lib/zeitgeist/leaf.h:
+	- added template function FindParentSupportingClass
+
+	* lib/oxygen/physicsserver/contactjointhandler.cpp:
+	- changed HandleCollision to use FindChildSupportingClass template
+
+	* lib/oxygen/physicsserver/collider.cpp:
+	- changed OnCollision() to use ListChildrenSupportingClass
+	template
+
+	* lib/oxygen/monitorserver/monitorserver.cpp:
+	- changed GetMonitorSystem to use template
+	FindChildSupportingClass
+
+	* lib/zeitgeist/leaf.h:
+	- added template function FindChildSupportingClass
+
+	* lib/oxygen/agentaspect/agentaspect.cpp:
+	- changed QueryPerceptors() and UpdateEffectorMap() to use
+	template ListChildrenSupportingClass()
+
+	* lib/zeitgeist/leaf.h:
+	- added template functino ListChildrenSupportingClass that
+	retrieves a list of children based on the c++ typeid instead of
+	the zeitgeist class string
+
 2004-03-25  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* plugin/soccer/sexpmonitor/sexpmonitor.cpp,
